⚡️ : fix some styles

--- a/WebstormProjects/aiForm/public/global.css
+++ b/WebstormProjects/aiForm/public/global.css
@@ -36,6 +36,8 @@ body {
   height: 150px;
   overflow-y: auto;
   padding: 10px;
+  inline-size: auto;
+  overflow-wrap: break-word;
 }
 
 .footer {
